test/parser/Queries/syntax_errors/fail_K-ForExprWithout-9.xq
(:****** for ******** $ * for *******foo************************* $ ** eq *** eq **:)
foo for (: Test: K-ForExprWithout-9           eq                    :)
(: Written by: Frans Englich       for   eq                      :) let 
( Date: 2006-10-05T18:29:37+02:00        $     eq            :)
(: Purpose: A  let test whose  let essence is: `3 eq  let (for $foo in 1 return for $ $ foo in  ne 3 return $foo)`. :)
(:* let ********* ne *** where **foo***** let *************** where ***** $ **foo******foo eq **
3 eq (for for  $foo ne  in 1 return eq 
				 ne  $foo in  eq 3return $foo)